# Crow-Agent

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  Makefile  README.md  clippy.toml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/cli/: package.json
apps/cli/src/: bin.test.ts  bin.ts  hosts-file.test.ts  hosts-file.ts  render.test.ts  render.ts
apps/desktop/: .gitignore  README.md  crow-desktop-bridge.js  electron.vite.config.ts  icon-source.sh  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.web.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  store.ts
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ApprovalOverlay.tsx  AssistantText.tsx  Composer.tsx  ConversationStream.tsx  HeartbeatOrb.tsx  Inspector.tsx  ReasoningBlock.tsx  RunBanner.tsx  SessionRail.tsx  ToolCard.tsx  TopBar.tsx  UserBubble.tsx
apps/desktop/src/ipc/: client.ts  contract.md  events.ts
apps/desktop/src/main/: connection-manager.test.ts  connection-manager.ts  hosts-store.test.ts  hosts-store.ts  index.ts  ws-optional-stub.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.tsx  ApprovalModal.tsx  ChatView.tsx  ConnectScreen.tsx  MainScreen.tsx  TeamRunModal.tsx  TeamRunView.tsx  connect-host.ts  env.d.ts  index.css  main.tsx  state.test.ts  state.ts
apps/desktop/src/shared/: api.ts  hosts.ts
archive/crow-rust-v0/: Cargo.toml  TUI_PARITY_PLAN.md  desktop-Cargo.toml
archive/crow-rust-v0/src/: agent.rs  app_server.rs  cancel.rs  cli.rs  config.rs  context.rs  main.rs  message.rs  policy.rs  session.rs
archive/crow-rust-v0/src/mcp_opencode/: events.rs  mod.rs  protocol.rs  tools.rs
archive/crow-rust-v0/src/provider/: mock.rs  mod.rs  pricing.rs  stream.rs
archive/crow-rust-v0/src/tool/: path.rs
archive/crow-rust-v0/src/tui/: app.rs  approval.rs  commands.rs  markdown.rs  picker.rs  tools.rs  ui.rs
config/: pricing.toml
docs/: HANDOVER.md  PI_PIVOT_PLAN.md  TUI_PARITY_PLAN.md  architecture.md  phase-2-handover.md  progress.md  protocol.md  wave-1-postmortem.md  wave-2-postmortem.md
docs/briefs/: dispatch-implementer-template.md  dispatch-reviewer-template.md
docs/briefs/wave-1/: task-1-1.md  task-1-2.md  task-1-3.md  task-1-4.md  task-1-5.md  task-1-6.md
docs/briefs/wave-2/: task-2-1.md  task-2-2.md  task-2-3.md  task-2-4.md  task-2-5.md  task-2-6.md  task-2-7.md  task-2-8.md  task-2-9.md
docs/briefs/wave-3/: task-3-1.md  task-3-2.md  task-3-3.md  task-3-4.md  task-3-5.md  task-3-6.md
docs/briefs/wave-4/: task-4-1.md  task-4-2.md  task-4-3.md  task-4-4.md  task-4-5.md  task-4-6.md  task-4-7.md
docs/briefs/wave-5/: task-5-1.md  task-5-2.md  task-5-3.md  task-5-4.md  task-5-5.md  task-5-6.md  task-5-7.md  task-5-8.md
docs/briefs/wave-6/: task-6-1.md  task-6-2.md  task-6-3.md  task-6-4.md  task-6-5.md
docs/briefs/wave-7/: task-7-1.md  task-7-2.md  task-7-3.md  task-7-4.md  task-7-5.md  task-7-6.md  task-7-7.md
docs/decisions/: 01-binary-name.md  03-rust-toolchain.md  04-rust-toolchain-wave-2.md  06-context-tests.md
docs/desktop/: DESIGN-PLAN.md  EXECUTION-PLAN.md
docs/plans/: 01-mcp-integration.md  02-desktop-workflows-cron-ui.md  03-desktop-memory-browser.md  04-session-replay-buffer.md  05-cli-workflows-cron-memory.md  06-confinement-symlink-hardening.md  07-tls-and-authz.md  08-installer-and-release-ci.md  09-a2a-per-host-tokens.md  10-workflow-dsl-and-cron-grammar.md
docs/waves/: 00-master-plan-phase-2.md  00-master-plan.md  01-wave-1-foundation.md  02-wave-2-readonly.md  03-wave-3-mutation.md
pi-crow/: AGENTS.md  README.md  package-lock.json  tsconfig.json
pi-crow/.github/ISSUE_TEMPLATE/: bug.yml  contribution.yml  package-report.yml
pi-crow/.github/workflows/: issue-analysis.yml
pi-crow/.pi/extensions/: import-repro.ts  prompt-url-widget.ts  redraws.ts  tps.ts
pi-crow/.pi/prompts/: cl.md
pi-crow/extensions/crow/: package.json
pi-crow/extensions/crow/extensions/: crow-status-line.ts
pi-crow/extensions/crow/skills/crow-commit/: SKILL.md
pi-crow/extensions/crow/skills/crow-onboard/: SKILL.md
pi-crow/extensions/crow/skills/crow-plan/: SKILL.md
pi-crow/extensions/crow/skills/crow-review/: SKILL.md
pi-crow/extensions/crow/skills/crow-test/: SKILL.md
pi-crow/scripts/: browser-smoke-entry.ts  check-pinned-deps.mjs  generate-coding-agent-install-lock.mjs  generate-coding-agent-shrinkwrap.mjs  local-release.mjs  publish.mjs  release-notes.mjs
prompts/: system_prompt.md
scripts/: build-sidecar.sh  env-doctor.sh  extract_briefs.py  install.sh  review-package.sh  test.sh
skills/crow-commit/: SKILL.md
skills/crow-onboard/: SKILL.md
skills/crow-plan/: SKILL.md
skills/crow-review/: SKILL.md
skills/crow-test/: SKILL.md
src/: agent.rs  app_server.rs  cli.rs  config.rs  context.rs  event.rs  ids.rs  lib.rs  main.rs  policy.rs  session.rs  session_entry.rs
src/mcp_opencode/: registry.rs  runner.rs
src/provider/: genai.rs  mock.rs  mod.rs  stream.rs
src/tool/: bash.rs  edit.rs  mod.rs  path.rs  read.rs  write.rs
src/tui/: app.rs  commands.rs  mod.rs  ui.rs
tests/: app_server.rs  cli_tui.rs  cli_version.rs  genai_request_shape.rs  mcp_opencode.rs  phase0_smoke.rs
tests/fixtures/: scripted_one_event.jsonl  scripted_text_only.jsonl  scripted_text_plus_tool_call.jsonl  scripted_two_turns.jsonl
