[package]
name = "crow"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Small autonomous coding agent"
license = "MIT"

[lib]
name = "crow"
path = "src/lib.rs"

[[bin]]
name = "crow"
path = "src/main.rs"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
ulid = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
