[package]
name = "crow"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Small autonomous coding agent"
license = "MIT"

[lib]
name = "crow"
path = "src/lib.rs"

[[bin]]
name = "crow"
path = "src/main.rs"

[lints.clippy]
# pedantic is OFF for v0 — our spec is exact, our types are simple,
# and pedantic warnings create churn for no real benefit. Re-evaluate
# at the v1 boundary.

[features]
# Honours `__script` / `__model` / `__max_turns` / `__max_tool_calls`
# in `crow serve`'s `submit` handler. Off by default so the shipped
# binary can never run a scripted provider or override safety limits.
# Always on under `cfg(test)` via the `any(test, ...)` guard.
serve-test-hooks = []

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "process", "io-util", "signal"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
ulid = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tempfile = "3"
anyhow = "1"
# Wave 2 additions:
genai = "=0.6.5"
schemars = "0.8"
ignore = "0.4"
similar = "2"
jsonschema = "0.17"
sha2 = "0.10"
regex = "1"
# Wave 3 additions:
secrecy = "0.8"
nix = { version = "0.27", features = ["signal", "process"] }
# Phase 4 additions:
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dirs = "5"
# TUI mode (interactive REPL against the kernel). Kept on the main
# dep list so the shipped binary carries the TUI; behind a CLI flag
# so headless workflows stay unaffected.
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
unicode-width = "0.2"
pulldown-cmark = { version = "0.13" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
assert_cmd = "2"
predicates = "3"
filetime = "0.2"
# Enable the test-only backdoors in `crow serve` (`__script` etc.)
# for integration tests. `cfg(test)` on the library is NOT set when
# integration tests link it, so the feature is the only reliable gate.
crow = { path = ".", features = ["serve-test-hooks"] }
